add version servlet update html index page to display version

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,10 @@
 
 <script type="text/javascript">
 
+$(function() {
+  $.get("/version", function(data) { $("#version").html(data); });
+});
+
 </script>
 
 <body>
@@ -13,6 +17,7 @@
 <center>
 <img src="/images/teamlogos/Carolina.png" width="320" height="120" />
 <h1>Carolina Rollergirls Browser-based Roller Derby Scoreboard</h1>
+<p>Version: <a id="version"></a></p>
 </center>
 </a>
 
